# PixivBot

./: .env  .env.prod  .gitignore  .gitmodules  Dockerfile  LICENSE  README.md  bot.py  bot_utils.py  docker-compose.yml  help.txt  my_logger.py  pixiv_api.py  pixiv_illust_provider.py  pixiv_ranking_provider.py  pixiv_shuffle_bookmarks_provider.py  pixiv_shuffle_illust_provider.py  pixiv_shuffle_illustrator_illust_provider.py  pixiv_utils.py  pyproject.toml  requirement.txt  requirements.txt  settings.py  settings.template.json
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: docker-publish-reverse ghcr.yml  docker-publish-reverse-ws.yml  docker-publish-reverse.yml  docker-publish-ws-pypy.yml  docker-publish-ws.yml  docker-publish.yml
handler/: __init__.py  abstract_message_handler.py  abstract_random_query_handler.py  handler_manager.py  help_query_handler.py  pixiv_illust_query_handler.py  pixiv_random_bookmark_query_handler.py  pixiv_random_illust_query_handler.py  pixiv_random_user_illust_query_handler.py  pixiv_ranking_query_handler.py  random_helper.py  sender_filter_query_handler.py
message_reactor/: __init__.py  abstract_message_reactor.py  abstract_shuffle_provider.py  pixiv_illust_provider.py  pixiv_ranking_provider.py  pixiv_shuffle_bookmarks_provider.py  pixiv_shuffle_illust_provider.py  pixiv_shuffle_illustrator_illust_provider.py
pixiv/: __init__.py  cache_manager.py  clean_cache.py  illust_cacher.py  illust_downloader.py  illust_utils.py  message_maker.py  pixiv_api.py  pixiv_error.py  search_helper.py
reverse/: .env  Dockerfile  Dockerfile.dev  README.md  pyproject.toml  requirements.txt
reverse-ws/: Dockerfile  Dockerfile.dev  README.md  bot.py  pyproject.toml  requirements.txt
settings/: __init__.py  settings.py
utils/: __init__.py  bot_func.py  cache_manager.py  loguru_warpper.py  reply_queue.py  settings.py  utils.py  wait_queue.py
ws/: Dockerfile  Dockerfile.dev  Dockerfile.pypy  README.md  bot.py  pyproject.toml  requirements.txt
