[tool.poetry]
name = "pixiv-bot"
version = "1.1.0"
description = "pixiv-bot"
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
nonebot-plugin-pixivbot-onebot-v11 = "^1.1.0a1"

[tool.poetry.dev-dependencies]
nonebot-test = "^0.1.0"
nb-cli = "^0.6.6"

[tool.nonebot]
plugins = ["nonebot_plugin_pixivbot_onebot_v11"]

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
